build_error.txt
    Checking agn v0.1.0 (/Users/hw24a094/ludus/agn)
error[E0432]: unresolved import `lazy_static`
  --> src/lib.rs:26:5
   |
26 | use lazy_static::lazy_static;
   |     ^^^^^^^^^^^ use of unresolved module or unlinked crate `lazy_static`
   |
   = help: if you wanted to use a crate named `lazy_static`, use `cargo add lazy_static` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `js_sys`
  --> src/utils.rs:13:19
   |
13 |     let promise = js_sys::Promise::new(&mut |resolve, _| {
   |                   ^^^^^^ use of unresolved module or unlinked crate `js_sys`
   |
   = help: if you wanted to use a crate named `js_sys`, use `cargo add js_sys` to add it to your `Cargo.toml`

error[E0425]: cannot find value `GLOBAL_INTERPRETER` in this scope
  --> src/lib.rs:68:21
   |
68 |     let mut guard = GLOBAL_INTERPRETER.lock().unwrap();
   |                     ^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `GLOBAL_INTERPRETER` in this scope
  --> src/lib.rs:86:21
   |
86 |         let guard = GLOBAL_INTERPRETER.lock().unwrap();
   |                     ^^^^^^^^^^^^^^^^^^ not found in this scope

warning: unused imports: `Duration` and `Instant`
 --> src/interpreter.rs:9:16
  |
9 | use web_time::{Duration, Instant};
  |                ^^^^^^^^  ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `tokio::sync::Mutex`
  --> src/interpreter.rs:22:5
   |
22 | use tokio::sync::Mutex;
   |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::env`
 --> src/ai_runtime.rs:4:5
  |
4 | use std::env;
  |     ^^^^^^^^

warning: unused import: `Condition`
 --> src/web_generator.rs:4:21
  |
4 | use crate::parser::{Condition, Expr, Program, Statement};
  |                     ^^^^^^^^^

warning: unused import: `crate::symbol_table::Value`
 --> src/graphics/renderer.rs:4:5
  |
4 | use crate::symbol_table::Value;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `winit::platform::web::WindowExtWebSys`
  --> src/lib.rs:22:5
   |
22 | use winit::platform::web::WindowExtWebSys;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::sync::Mutex as StdMutex`
  --> src/lib.rs:25:5
   |
25 | use std::sync::Mutex as StdMutex;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unreachable pattern
   --> src/interpreter.rs:453:17
    |
376 |                 Statement::AnimateStatement { duration, target, property, value } => {
    |                 ----------------------------------------------------------------- matches all the relevant values
...
453 |                 Statement::AnimateStatement { duration, target, property, value } => {
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this
    |
    = note: `#[warn(unreachable_patterns)]` (part of `#[warn(unused)]`) on by default

error[E0004]: non-exhaustive patterns: `&Statement::Animate { .. }` not covered
   --> src/interpreter.rs:109:19
    |
109 |             match stmt {
    |                   ^^^^ pattern `&Statement::Animate { .. }` not covered
    |
note: `Statement` defined here
   --> src/parser.rs:24:10
    |
 24 | pub enum Statement {
    |          ^^^^^^^^^
...
103 |     Animate {
    |     ------- not covered
    = note: the matched value is of type `&Statement`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
    |
477 ~                 },
478 +                 &Statement::Animate { .. } => todo!()
    |

error[E0599]: no variant or associated item named `KeywordAfter` found for enum `Token` in the current scope
   --> src/lexer.rs:165:21
    |
  5 | pub enum Token {
    | -------------- variant or associated item `KeywordAfter` not found for this enum
...
165 |     ("後", || Token::KeywordAfter),
    |                      ^^^^^^^^^^^^ variant or associated item not found in `Token`
    |
help: there is a variant with a similar name
    |
165 -     ("後", || Token::KeywordAfter),
165 +     ("後", || Token::KeywordOver),
    |

error[E0599]: no method named `parse_unary_or_async` found for mutable reference `&mut Parser` in the current scope
   --> src/parser.rs:275:25
    |
275 |             return self.parse_unary_or_async();
    |                         ^^^^^^^^^^^^^^^^^^^^
    |
help: there is a method `parse_unary_or_async_op` with a similar name
    |
275 |             return self.parse_unary_or_async_op();
    |                                             +++

error[E0599]: no variant or associated item named `KeywordAfter` found for enum `Token` in the current scope
    --> src/parser.rs:1108:44
     |
1108 |         if matches!(self.current(), Token::KeywordAfter) {
     |                                            ^^^^^^^^^^^^ variant or associated item not found in `Token`
     |
    ::: src/lexer.rs:5:1
     |
   5 | pub enum Token {
     | -------------- variant or associated item `KeywordAfter` not found for this enum
     |
help: there is a variant with a similar name
     |
1108 -         if matches!(self.current(), Token::KeywordAfter) {
1108 +         if matches!(self.current(), Token::KeywordOver) {
     |

error[E0004]: non-exhaustive patterns: `&Statement::DelayStatement { .. }` and `&Statement::AnimateStatement { .. }` not covered
   --> src/type_inferencer.rs:103:15
    |
103 |         match stmt {
    |               ^^^^ patterns `&Statement::DelayStatement { .. }` and `&Statement::AnimateStatement { .. }` not covered
    |
note: `Statement` defined here
   --> src/parser.rs:24:10
    |
 24 | pub enum Statement {
    |          ^^^^^^^^^
...
 73 |     DelayStatement {
    |     -------------- not covered
...
 78 |     AnimateStatement {
    |     ---------------- not covered
    = note: the matched value is of type `&Statement`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
    |
224 ~             },
225 +             &Statement::DelayStatement { .. } | &Statement::AnimateStatement { .. } => todo!()
    |

warning: unused variable: `const_name`
   --> src/codegen.rs:132:21
    |
132 |                 let const_name = self.add_string_constant(s);
    |                     ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_const_name`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `output_name`
   --> src/compiler.rs:137:62
    |
137 |     fn compile_wasm(&self, program: &crate::parser::Program, output_name: &str) -> Result<CompileResult, CompileError> {
    |                                                              ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_output_name`

warning: unreachable pattern
   --> src/graphics/state.rs:520:17
    |
477 |                 Value::Image(path) => {
    |                 ------------------ matches all the relevant values
...
520 |                 Value::Image(_) => {
    |                 ^^^^^^^^^^^^^^^ no value can reach this

warning: unused variable: `s`
   --> src/graphics/state.rs:524:31
    |
524 |                 Value::String(s) => {
    |                               ^ help: if this is intentional, prefix it with an underscore: `_s`

warning: unused variable: `index_count`
   --> src/graphics/state.rs:533:37
    |
533 |         let (vertex_buf, index_buf, index_count) = self.renderer.get_buffers(&self.device);
    |                                     ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_index_count`

warning: unused variable: `end_indices`
   --> src/graphics/renderer.rs:129:13
    |
129 |         let end_indices = self.geometry.indices.len() as u32;
    |             ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_end_indices`

warning: unused variable: `end_indices`
   --> src/graphics/renderer.rs:254:13
    |
254 |         let end_indices = self.geometry.indices.len() as u32;
    |             ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_end_indices`

Some errors have detailed explanations: E0004, E0425, E0432, E0433, E0599.
For more information about an error, try `rustc --explain E0004`.
warning: `agn` (lib) generated 15 warnings
error: could not compile `agn` (lib) due to 9 previous errors; 15 warnings emitted
